discussion/kv_engine/163077/163077_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Add a make_wire_encoded_string factory method in xattr utils

Add code that can generate a xattr encoding value into xattr utils
so it is easily accessible to all modules.

Change-Id: I62452e6c32445773923894f3e03629c308ca8286

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-06 10:46:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-06 11:31:33.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34712/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/xattr/utils.cc:184:13:
error: no member named "append" in "std::basic_string_view<char, std::char_traits<char> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34712/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40805/ : FAILURE

Compile error at ..\kv_engine\xattr\utils.cc(184): error C2039: "append": is not a member of "std::basic_string_view<char,std::char_traits<char>>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40805/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13191/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/xattr/utils.h:122:20: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
        const std::vector<std::pair<std::string, std::string>>& xattrList);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/xattr/utils.cc:184:13: error: no member named "append" in "std::basic_string_view<char, std::char_traits<char> >" [clang-diagnostic-error]
    encoded.append(body);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/xattr/utils.cc:185:12: error: no viable conversion from returned value of type "std::basic_string_view<char, std::char_traits<char> >" to function return type "std::string" (aka "basic_string<char>") [clang-diagnostic-error]
    return encoded;
           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:448:7: note: candidate constructor not viable: no known conversion from "std::basic_string_view<char, std::char_traits<char> >" to "const std::__cxx11::basic_string<char> &" for 1st argument
      basic_string(const basic_string& __str)
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:525:7: note: candidate constructor template not viable: no known conversion from "std::basic_string_view<char, std::char_traits<char> >" to "const char *" for 1st argument
      basic_string(const _CharT* __s, const _Alloc& __a = _Alloc())
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:552:7: note: candidate constructor not viable: no known conversion from "std::basic_string_view<char, std::char_traits<char> >" to "std::__cxx11::basic_string<char> &&" for 1st argument
      basic_string(basic_string&& __str) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:579:7: note: candidate constructor not viable: no known conversion from "std::basic_string_view<char, std::char_traits<char> >" to "initializer_list<char>" for 1st argument
      basic_string(initializer_list<_CharT> __l, const _Alloc& __a = _Alloc())
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13191/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/xattr/utils.h:122:20:
error: no template named "vector" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2809/ : FAILURE

Compile error at [2021-10-06T11:22:48.399Z] ../kv_engine/xattr/utils.cc:184:13:
error: no member named "append" in "std::basic_string_view<char, std::char_traits<char> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2809/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15647/ : FAILURE

Compile error at [2021-10-06T11:24:38.715Z] ../kv_engine/xattr/utils.cc:184:13:
error: no member named "append" in "std::basic_string_view<char, std::char_traits<char> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15647/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15060/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23076/ : FAILURE

Compile error at [2021-10-06T11:24:16.591Z] ../kv_engine/xattr/utils.cc:184:13:
error: no member named "append" in "std::basic_string_view<char, std::char_traits<char> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23076/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14790/ : FAILURE

Compile error at [2021-10-06T11:27:18.125Z] ../kv_engine/xattr/utils.cc:184:13:
error: ?struct std::basic_string_view<char>? has no member named ?append?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14790/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2844/ : FAILURE

Compile error at [2021-10-06T11:02:42.667Z] ../kv_engine/xattr/utils.cc:184:13:
error: ?struct std::basic_string_view<char>? has no member named ?append?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2844/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13937/ : FAILURE

Compile error at [2021-10-06T10:55:09.790Z] ../kv_engine/xattr/utils.cc:184:13:
error: no member named "append" in "std::__1::basic_string_view<char, std::__1::char_traits<char> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13937/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11978/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
